# skeepy-notes

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.gsd/: DECISIONS.md  ROADMAP.md  STATE.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-RESEARCH.md  M001-ROADMAP.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md
.gsd/milestones/M001/slices/S02/: S02-PLAN.md
.gsd/milestones/M001/slices/S03/: S03-PLAN.md
.gsd/milestones/M001/slices/S04/: S04-PLAN.md
.gsd/milestones/M001/slices/S05/: S05-PLAN.md
.gsd/milestones/M001/slices/S06/: S06-PLAN.md
.gsd/milestones/M001/slices/S07/: S07-UAT.md
.gsd/milestones/M001/slices/S08/: S08-PLAN.md
.gsd/milestones/M002/: M002-ROADMAP.md
.gsd/milestones/M002/slices/S09/: S09-PLAN.md
.gsd/milestones/M002/slices/S10/: S10-PLAN.md
.gsd/milestones/M002/slices/S11/: S11-PLAN.md
.gsd/milestones/M002/slices/S12/: S12-PLAN.md
.gsd/milestones/M003/: M003-ROADMAP.md
.gsd/milestones/M003/slices/S13/: S13-PLAN.md
.gsd/milestones/M003/slices/S14/: S14-PLAN.md
.gsd/milestones/M004/: M004-ROADMAP.md
.gsd/milestones/M004/slices/S18/: S18-PLAN.md
.gsd/milestones/M005/: M005-ROADMAP.md
.gsd/milestones/M006/: M006-ROADMAP.md
.gsd/milestones/M007/: M007-ROADMAP.md
.gsd/milestones/M008/: M008-ROADMAP.md
scripts/: gh-secret.ps1  setup-release.ps1
src/: App.tsx  NoteWindow.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  skeepy.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: error.rs  lib.rs  note.rs  provider.rs  repository.rs  settings.rs
src-tauri/crates/core/src/services/: mod.rs  note_service.rs  sync_orchestrator.rs
src-tauri/crates/os_integration/: Cargo.toml
src-tauri/crates/os_integration/src/: lib.rs
src-tauri/crates/providers/keep/: Cargo.toml
src-tauri/crates/providers/keep/src/: api.rs  auth.rs  lib.rs  provider.rs  token.rs
src-tauri/crates/providers/local/: Cargo.toml
src-tauri/crates/providers/local/src/: format.rs  lib.rs  provider.rs
src-tauri/crates/providers/markdown/: Cargo.toml
src-tauri/crates/providers/markdown/src/: frontmatter.rs  lib.rs  provider.rs
src-tauri/crates/providers/notion/: Cargo.toml
src-tauri/crates/providers/notion/src/: api.rs  auth.rs  lib.rs  provider.rs  token.rs
src-tauri/crates/providers/obsidian/: Cargo.toml
src-tauri/crates/providers/obsidian/src/: frontmatter.rs  lib.rs  provider.rs
src-tauri/crates/providers/onenote/: Cargo.toml
src-tauri/crates/providers/onenote/src/: api.rs  auth.rs  html.rs  lib.rs  provider.rs  token.rs
src-tauri/crates/providers/sticky_notes/: Cargo.toml
src-tauri/crates/providers/sticky_notes/src/: lib.rs  provider.rs  schema.rs  text.rs
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/migrations/: 001_initial.sql  002_fts5.sql  003_usage_events.sql  004_embeddings.sql
src-tauri/crates/storage/src/: db.rs  lib.rs
src-tauri/crates/storage/src/repositories/: mod.rs  note_repository.rs  settings_repository.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  smart_sync.rs  state.rs
src-tauri/src/commands/: conflict.rs  export.rs  graph.rs  keep.rs  labels.rs  markdown.rs  mod.rs  notes.rs  notion.rs  obsidian.rs  onenote.rs  providers.rs  search.rs  settings.rs  sync.rs  updater.rs  window.rs  write.rs
src-tauri/src/semantic/: indexer.rs  mod.rs  tfidf.rs
src/components/: ConflictPanel.tsx  CreateNoteModal.tsx  GraphView.tsx  Icons.tsx  LabelsPanel.tsx  MarkdownRenderer.tsx  NoteCard.tsx  NoteDetailPanel.tsx  NoteGrid.tsx  ParticleBackground.tsx  ProviderBadge.tsx  ProviderStatusPanel.tsx  SearchBar.tsx  Settings.tsx  UpdateBanner.tsx  WelcomeScreen.tsx
src/services/: tauri.service.ts
src/stores/: notes.store.ts  sync.store.ts
src/styles/: global.css  note-window.css
src/types/: note.ts
