[workspace]
resolver = "2"
members = [
    "src-tauri/crates/core",
    "src-tauri/crates/storage",
    "src-tauri/crates/providers/local",
    "src-tauri/crates/providers/keep",
    "src-tauri/crates/providers/sticky_notes",
    "src-tauri/crates/providers/markdown",
    "src-tauri/crates/providers/onenote",
    "src-tauri/crates/providers/obsidian",
    "src-tauri/crates/providers/notion",
    "src-tauri/crates/os_integration",
    "src-tauri",
]

[workspace.dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1",    features = ["v4", "serde"] }
chrono      = { version = "0.4",  features = ["serde"] }
async-trait = "0.1"
thiserror   = "1"
tokio       = { version = "1",    features = ["full"] }
tracing     = "0.1"

[profile.release]
opt-level   = 3
strip       = "symbols"
lto         = true
codegen-units = 1
