[package]
name        = "skeepy-core"
version     = "0.1.0"
edition     = "2021"
description = "Skeepy domain model — no I/O, pure business logic"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
