[package]
name        = "skeepy-storage"
version     = "0.1.0"
edition     = "2021"
description = "SQLite + FTS5 persistence layer for Skeepy"

[dependencies]
skeepy-core = { path = "../../crates/core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
# Bundled SQLite — no system dependency required
rusqlite    = { version = "0.31", features = ["bundled"] }
