[package]
name        = "skeepy-provider-markdown"
version     = "0.1.0"
edition     = "2021"
description = "Markdown folder provider for Skeepy"

[dependencies]
skeepy-core = { path = "../../../crates/core" }
async-trait = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
# SHA-256 for stable source_id computation
sha2        = "0.10"
hex         = "0.4"

[dev-dependencies]
tempfile = "3"
