[package]
name        = "skeepy-provider-notion"
version     = "0.1.0"
edition     = "2021"
description = "Notion provider for Skeepy (Notion API v2)"

[dependencies]
skeepy-core = { path = "../../../crates/core" }
async-trait = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64      = "0.22"
sha2        = "0.10"
hex         = "0.4"
rand        = "0.8"
keyring     = { version = "3", features = ["windows-native"] }
governor    = "0.6"
