[package]
name        = "skeepy-provider-obsidian"
version     = "0.1.0"
edition     = "2021"
description = "Obsidian vault provider for Skeepy"

[dependencies]
skeepy-core = { path = "../../../crates/core" }
async-trait = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
sha2        = "0.10"
hex         = "0.4"

[dev-dependencies]
tempfile = "3"
